# shampy

./: README.md
shampy_bringup/: CMakeLists.txt  package.xml
shampy_bringup/launch/: create3_nodes.launch.py  create3_nodes_tmp.launch.py
shampy_control/: CMakeLists.txt  package.xml
shampy_control/src/: control.py
shampy_description/: CMakeLists.txt  package.xml
shampy_description/config/: model.rviz  navigation.rviz  robot.rviz
shampy_description/description/urdf/: caster.urdf.xacro  create3.urdf.xacro  rplidar.urdf.xacro  shampy.urdf.xacro  wheel_drop.urdf.xacro  wheel_with_wheeldrop.urdf.xacro
shampy_description/description/urdf/sensors/: ir_intensity.urdf.xacro
shampy_description/launch/: robot_description.launch.py  view_model.launch.py  view_robot.launch.py
shampy_navigation/: CMakeLists.txt  package.xml
shampy_navigation/config/: carto_lds_2d.lua
shampy_navigation/launch/: localization.launch.py  nav2.launch.py  slam.launch.py
shampy_nodes/: CMakeLists.txt  package.xml
shampy_nodes/src/: motion_control_node.cpp
shampy_simulator/: CMakeLists.txt  package.xml
shampy_simulator/launch/: create3_ros_ign_bridge.launch.py  ign.launch.py  ros_ign_bridge.launch.py  shampy_ign.launch.py  shampy_spawn.launch.py
