<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shampy_description</name>
  <version>2.1.1</version>
  <description>Shampy robot Description package inspired by:-
               turtlebot4_description
               turtlebot4_viz
  </description>
  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <maintainer email="hluo@clearpathrobotics.com">Hilary Luo</maintainer>
  <maintainer email="reishabhrathore2003@gmail.com">Reishabh Rathore</maintainer>

  <license>Apache 2.0</license>

  <author email="rkreinin@clearpathrobotics.com">Roni Kreinin</author> 
  <author email="reishabhrathore2003@gmail.com">Reishabh Rathore</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>rqt_robot_monitor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
